--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+# Lockfiles - these SHOULD be committed
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
 # Build outputs
 dist/
 dist-electron/
