--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:landing": "cd landing-page && vite build",
     "build:landing:gh-pages": "cd landing-page && NODE_ENV=production vite build",
     "build:electron": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build && node scripts/bundle-creds.js && electron-builder",
+    "build:electron:ci": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build && electron-builder",
     "rebuild:electron": "pkill -f 'Timer Tracker' || true && pkill -f 'electron' || true && pnpm build:electron && open dist-electron/ && open /Applications/",
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
