--- a/package.json
+++ b/package.json
@@ -7,27 +7,120 @@
   "scripts": {
     "dev:web": "vite --port 5173",
     "dev:landing": "vite --config landing-page/vite.config.js --port 5174",
-    "dev:electron": "concurrently \"tsc -p tsconfig.desktop.json -w\" \"vite build --watch\" \"wait-on dist/desktop/main.js && cp desktop/preload.js dist/desktop/ && wait-on dist/renderer/index.html && electron . --dev\"",
+    "dev:electron": "node scripts/convert-icons.js && concurrently \"tsc -p tsconfig.desktop.json -w\" \"vite build --watch\" \"wait-on dist/desktop/main.js && cp desktop/preload.js dist/desktop/ && wait-on dist/renderer/index.html && electron . --dev\"",
     "build": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build",
     "build:desktop": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/",
     "build:renderer": "vite build",
-    "build:landing": "cd landing-page && vite build",
+    "build:landing": "vite --config landing-page/vite.config.js build && cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
     "build:landing:gh-pages": "cd landing-page && NODE_ENV=production vite build",
     "build:electron": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build && node scripts/bundle-creds.js && electron-builder",
     "build:electron:ci": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build && electron-builder",
     "rebuild:electron": "pkill -f 'Dingo Track' || true && pkill -f 'electron' || true && pnpm build:electron && open dist-electron/ && open /Applications/",
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "convert-icons": "node scripts/convert-icons.js"
+    "convert-icons": "node scripts/convert-icons.js",
+    "check-deps": "depcheck --json --ignore-bin-package true 2>/dev/null",
+    "fix-deps": "pnpm run check-deps | jq -r '.missing[]' | xargs -r pnpm add -w"
   },
   "main": "dist/desktop/main.js",
   "dependencies": {
-    "dotenv": "^17.2.1",
+    "@isaacs/cliui": "^8.0.2",
+    "@pkgjs/parseargs": "^0.11.0",
+    "abort-controller": "^3.0.0",
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^6.2.1",
+    "archiver-utils": "^5.0.2",
+    "argparse": "^2.0.1",
+    "balanced-match": "^3.0.1",
+    "base64-js": "^1.5.1",
+    "bignumber.js": "^9.3.1",
+    "brace-expansion": "^4.0.1",
+    "buffer-crc32": "^1.0.0",
+    "buffer-equal-constant-time": "^1.0.1",
+    "color-convert": "^3.1.0",
+    "compress-commons": "^7.0.0",
+    "concat-map": "^0.0.2",
+    "config-file-ts": "0.2.8-rc1",
+    "core-util-is": "^1.0.3",
+    "crc-32": "^1.2.2",
+    "crc32-stream": "^7.0.1",
+    "cross-spawn": "^7.0.6",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^12.0.2",
+    "eastasianwidth": "^0.3.0",
+    "ecdsa-sig-formatter": "^1.0.11",
     "electron-store": "^8.1.0",
+    "emoji-regex": "^10.4.0",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "extend": "^3.0.2",
+    "fast-text-encoding": "^1.0.6",
+    "foreground-child": "^3.3.1",
+    "fs.realpath": "^1.0.0",
+    "gaxios": "^7.1.1",
+    "gcp-metadata": "^7.0.1",
+    "get-intrinsic": "^1.3.0",
+    "glob": "^11.0.3",
     "google-auth-library": "^10.2.1",
-    "googleapis": "^126.0.1",
+    "google-logging-utils": "^1.1.1",
+    "googleapis": "^128.0.0",
     "googleapis-common": "^8.0.0",
-    "node-cron": "^3.0.3"
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "gtoken": "^8.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-fullwidth-code-point": "^5.0.0",
+    "isarray": "^2.0.5",
+    "isexe": "^3.1.1",
+    "jackspeak": "^4.1.1",
+    "js-yaml": "^4.1.0",
+    "json-bigint": "^1.0.0",
+    "json5": "^2.2.3",
+    "jwa": "^2.0.1",
+    "jws": "^4.0.0",
+    "lazy-val": "^1.0.5",
+    "lazystream": "^1.0.1",
+    "lodash.defaults": "^4.2.0",
+    "lodash.difference": "^4.5.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.union": "^4.6.0",
+    "lru-cache": "^11.1.0",
+    "math-intrinsics": "^1.1.0",
+    "minimatch": "^10.0.3",
+    "minipass": "^7.1.2",
+    "node-fetch": "^3.3.2",
+    "normalize-path": "^3.0.0",
+    "object-inspect": "^1.13.4",
+    "once": "^1.4.0",
+    "package-json-from-dist": "^1.0.1",
+    "path-is-absolute": "^2.0.0",
+    "path-key": "^4.0.0",
+    "path-scurry": "^2.0.0",
+    "process-nextick-args": "^2.0.1",
+    "qs": "^6.14.0",
+    "read-config-file": "^6.4.0",
+    "readable-stream": "^4.7.0",
+    "safe-buffer": "^5.2.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^4.0.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "signal-exit": "^4.1.0",
+    "string-width": "^7.2.0",
+    "string-width-cjs": "^5.1.1",
+    "string_decoder": "^1.3.0",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^8.0.0",
+    "util-deprecate": "^1.0.2",
+    "uuid": "^11.1.0",
+    "which": "^5.0.0",
+    "wrap-ansi": "^9.0.0",
+    "wrap-ansi-cjs": "^8.0.0",
+    "wrappy": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -36,7 +129,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
-    "electron": "^26.2.1",
+    "depcheck": "^1.4.7",
+    "electron": "25.9.8",
     "electron-builder": "^24.6.4",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
