--- a/package.json
+++ b/package.json
@@ -5,18 +5,32 @@
   "private": true,
   "description": "Mac menu bar time tracking with Google Calendar integration",
   "scripts": {
+    "dev": "npm run ensure-icons && concurrently \"npm run dev:main\" \"npm run dev:renderer\" \"npm run dev:electron\"",
+    "dev:main": "tsc -p tsconfig.desktop.json --watch",
+    "dev:renderer": "vite dev --port 5173",
+    "dev:electron": "wait-on dist/desktop/main.js && wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev",
     "dev:web": "vite --port 5173",
-    "dev:landing": "vite --config landing-page/vite.config.js --port 5174",
-    "dev:electron": "node scripts/convert-icons.js && concurrently \"tsc -p tsconfig.desktop.json -w\" \"vite build --watch\" \"wait-on dist/desktop/main.js && cp desktop/preload.js dist/desktop/ && wait-on dist/renderer/index.html && electron . --dev\"",
-    "build": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build",
-    "build:desktop": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/",
+    "dev:landing": "cd landing-page && vite --port 5174",
+    "build": "npm run clean && npm run ensure-icons && npm run build:main && npm run build:renderer",
+    "build:main": "tsc -p tsconfig.desktop.json && npm run copy-preload",
     "build:renderer": "vite build",
-    "build:landing": "vite --config landing-page/vite.config.js build && cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
-    "build:landing:gh-pages": "cd landing-page && NODE_ENV=production pnpm vite build",
-    "build:electron": "node scripts/convert-icons.js && pnpm run bundle-main && cp desktop/preload.js dist/desktop/ && vite build && node scripts/bundle-creds.js && electron-builder",
-    "build:electron:ci": "node scripts/convert-icons.js && tsc -p tsconfig.desktop.json && cp desktop/preload.js dist/desktop/ && vite build && electron-builder",
-    "rebuild:electron": "pkill -f 'Dingo Track' || true && pkill -f 'electron' || true && pnpm build:electron && open dist-electron/ && open /Applications/",
+    "build:landing": "cd landing-page && vite build && cd .. && npm run copy-landing-assets",
+    "build:landing:prod": "cd landing-page && NODE_ENV=production vite build",
+    "bundle-main": "ncc build dist/desktop/main.js -o dist-bundle --minify --no-cache",
+    "bundle-creds": "node scripts/bundle-creds.js",
+    "package": "npm run build && npm run bundle-main && npm run bundle-creds && electron-builder",
+    "package:ci": "npm run build && npm run bundle-creds && electron-builder",
+    "dist": "npm run package",
+    "dist:all": "npm run package -- -mwl",
+    "build:electron": "npm run package",
+    "build:electron:ci": "npm run package:ci",
+    "rebuild:electron": "pkill -f 'Dingo Track' || true && pkill -f 'electron' || true && npm run package && open dist-electron/ && open /Applications/",
+    "clean": "rimraf dist dist-bundle dist-electron",
+    "ensure-icons": "node scripts/ensure-icons.js",
+    "copy-preload": "cp desktop/preload.js dist/desktop/",
+    "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
     "postinstall": "electron-builder install-app-deps",
+    "typecheck": "tsc --noEmit && tsc -p tsconfig.desktop.json --noEmit",
     "convert-icons": "node scripts/convert-icons.js"
   },
   "main": "dist-bundle/index.js",
@@ -127,12 +141,14 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
     "electron": "25.9.8",
     "electron-builder": "^24.6.4",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.3.3",
     "tsx": "^4.20.3",
