--- a/.github/workflows/deploy-landing.yml
+++ b/.github/workflows/deploy-landing.yml
@@ -90,7 +90,7 @@ jobs:
         run: pnpm convert-icons
 
       - name: Build landing page for GitHub Pages
-        run: cd landing-page && NODE_ENV=production pnpm vite build
+        run: pnpm build:landing:prod
 
       - name: Setup downloads directory and copy assets
         run: |
