--- a/package.json
+++ b/package.json
@@ -1,160 +1,44 @@
 {
   "name": "@every-time/dingo-track",
-  "author": "Every Time Team",
   "version": "1.0.0",
+  "description": "Time tracking application",
+  "main": "./out/main/index.js",
   "private": true,
-  "description": "Mac menu bar time tracking with Google Calendar integration",
   "scripts": {
-    "dev": "npm run ensure-icons && concurrently \"npm run dev:main\" \"npm run dev:renderer\" \"npm run dev:electron\"",
-    "dev:main": "tsc -p tsconfig.desktop.json --watch",
-    "dev:renderer": "vite dev --port 5173",
-    "dev:electron": "wait-on dist/desktop/main.js && wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev",
-    "dev:web": "vite --port 5173",
+    "dev": "electron-vite dev",
+    "dev:electron": "electron-vite dev",
     "dev:landing": "cd landing-page && vite --port 5174",
-    "build": "npm run clean && npm run ensure-icons && npm run build:main && npm run build:renderer",
-    "build:main": "tsc -p tsconfig.desktop.json && npm run copy-preload",
-    "build:renderer": "vite build",
+    "build": "electron-vite build",
+    "build:electron": "electron-vite build",
     "build:landing": "cd landing-page && vite build && cd .. && npm run copy-landing-assets",
-    "build:landing:prod": "cd landing-page && NODE_ENV=production vite build",
-    "bundle-main": "ncc build dist/desktop/main.js -o dist-bundle --minify --no-cache",
-    "bundle-creds": "node scripts/bundle-creds.js",
-    "package": "npm run build && npm run bundle-main && npm run bundle-creds && electron-builder",
-    "package:ci": "npm run build && npm run bundle-creds && electron-builder",
-    "dist": "npm run package",
-    "dist:all": "npm run package -- -mwl",
-    "build:electron": "npm run package",
-    "build:electron:ci": "npm run package:ci",
-    "rebuild:electron": "pkill -f 'Dingo Track' || true && pkill -f 'electron' || true && npm run package && open dist-electron/ && open /Applications/",
-    "clean": "rimraf dist dist-bundle dist-electron",
-    "ensure-icons": "node scripts/ensure-icons.js",
-    "copy-preload": "cp desktop/preload.js dist/desktop/",
+    "build:landing:prod": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
     "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
+    "preview": "electron-vite preview",
+    "pack": "npm run build && electron-builder",
+    "dist": "npm run build && electron-builder",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:linux": "npm run build && electron-builder --linux",
     "postinstall": "electron-builder install-app-deps",
-    "typecheck": "tsc --noEmit && tsc -p tsconfig.desktop.json --noEmit",
+    "ensure-icons": "node scripts/ensure-icons.js",
     "convert-icons": "node scripts/convert-icons.js"
   },
-  "main": "dist-bundle/index.js",
   "dependencies": {
-    "@isaacs/cliui": "^8.0.2",
-    "@pkgjs/parseargs": "^0.11.0",
-    "abort-controller": "^3.0.0",
-    "ansi-regex": "^6.1.0",
-    "ansi-styles": "^6.2.1",
-    "archiver-utils": "^5.0.2",
-    "argparse": "^2.0.1",
-    "balanced-match": "^3.0.1",
-    "base64-js": "^1.5.1",
-    "bignumber.js": "^9.3.1",
-    "brace-expansion": "^4.0.1",
-    "buffer-crc32": "^1.0.0",
-    "buffer-equal-constant-time": "^1.0.1",
-    "color-convert": "^3.1.0",
-    "compress-commons": "^7.0.0",
-    "concat-map": "^0.0.2",
-    "config-file-ts": "0.2.8-rc1",
-    "core-util-is": "^1.0.3",
-    "crc-32": "^1.2.2",
-    "crc32-stream": "^7.0.1",
-    "cross-spawn": "^7.0.6",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.3.1",
-    "dotenv-expand": "^12.0.2",
-    "eastasianwidth": "^0.3.0",
-    "ecdsa-sig-formatter": "^1.0.11",
-    "electron-store": "^8.1.0",
-    "emoji-regex": "^10.4.0",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "extend": "^3.0.2",
-    "fast-text-encoding": "^1.0.6",
-    "foreground-child": "^3.3.1",
-    "fs.realpath": "^1.0.0",
-    "gaxios": "^7.1.1",
-    "gcp-metadata": "^7.0.1",
-    "get-intrinsic": "^1.3.0",
-    "glob": "^11.0.3",
-    "google-auth-library": "^10.2.1",
-    "google-logging-utils": "^1.1.1",
-    "googleapis": "^128.0.0",
-    "googleapis-common": "^8.0.0",
-    "gopd": "^1.2.0",
-    "graceful-fs": "^4.2.11",
-    "gtoken": "^8.0.0",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-fullwidth-code-point": "^5.0.0",
-    "isarray": "^2.0.5",
-    "isexe": "^3.1.1",
-    "jackspeak": "^4.1.1",
-    "js-yaml": "^4.1.0",
-    "json-bigint": "^1.0.0",
-    "json5": "^2.2.3",
-    "jwa": "^2.0.1",
-    "jws": "^4.0.0",
-    "lazy-val": "^1.0.5",
-    "lazystream": "^1.0.1",
-    "lodash.defaults": "^4.2.0",
-    "lodash.difference": "^4.5.0",
-    "lodash.flatten": "^4.4.0",
-    "lodash.isplainobject": "^4.0.6",
-    "lodash.union": "^4.6.0",
-    "lru-cache": "^11.1.0",
-    "math-intrinsics": "^1.1.0",
-    "minimatch": "^10.0.3",
-    "minipass": "^7.1.2",
-    "node-fetch": "^3.3.2",
-    "normalize-path": "^3.0.0",
-    "object-inspect": "^1.13.4",
-    "once": "^1.4.0",
-    "package-json-from-dist": "^1.0.1",
-    "path-is-absolute": "^2.0.0",
-    "path-key": "^4.0.0",
-    "path-scurry": "^2.0.0",
-    "process-nextick-args": "^2.0.1",
-    "qs": "^6.14.0",
-    "read-config-file": "^6.4.0",
-    "readable-stream": "^4.7.0",
-    "safe-buffer": "^5.2.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^4.0.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "signal-exit": "^4.1.0",
-    "string-width": "^7.2.0",
-    "string-width-cjs": "^5.1.1",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^7.1.0",
-    "strip-ansi-cjs": "^8.0.0",
-    "util-deprecate": "^1.0.2",
-    "uuid": "^11.1.0",
-    "which": "^5.0.0",
-    "wrap-ansi": "^9.0.0",
-    "wrap-ansi-cjs": "^8.0.0",
-    "wrappy": "^1.0.2"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vercel/ncc": "^0.38.3",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^8.2.0",
-    "cross-env": "^7.0.3",
-    "depcheck": "^1.4.7",
-    "electron": "25.9.8",
-    "electron-builder": "^24.6.4",
-    "postcss": "^8.4.27",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^5.0.5",
-    "sharp": "^0.34.3",
-    "tailwindcss": "^3.3.3",
-    "tsx": "^4.20.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "wait-on": "^7.0.1"
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "electron": "^31.0.2",
+    "electron-builder": "^24.13.3",
+    "electron-vite": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.1",
+    "rimraf": "^6.0.1"
   },
   "build": {
     "appId": "com.everytime.dingo-track",
@@ -163,14 +47,9 @@
       "output": "dist-electron"
     },
     "files": [
-      "dist/**/*",
-      "dist-bundle/**/*",
-      "src/**/*",
-      "public/**/*",
+      "out/**/*",
       "assets/**/*",
-      ".env",
-      "package.json",
-      "node_modules/**/*"
+      ".env"
     ],
     "asar": false,
     "icon": "assets/app-icon.png",
@@ -179,15 +58,26 @@
       "category": "public.app-category.productivity",
       "target": {
         "target": "dmg",
-        "arch": [
-          "x64",
-          "arm64"
-        ]
-      },
-      "extendInfo": {
-        "LSUIElement": 1,
-        "LSBackgroundOnly": false
+        "arch": ["arm64", "x64"]
       }
+    },
+    "win": {
+      "icon": "assets/app-icon.png",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ]
+    },
+    "linux": {
+      "icon": "assets/app-icon.png",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64"]
+        }
+      ]
     }
   }
 }
