--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
+    "sharp": "^0.33.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.1",
     "vitest": "^3.2.4"
