--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
         ]
       }
     },
+    "dmg": {
+      "format": "ULFO"
+    },
     "win": {
       "icon": "assets/app-icon.png",
       "target": [
