--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,18 @@ jobs:
     - name: Install dependencies
       run: pnpm install
     
+    - name: Setup code signing (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        echo "${{ secrets.CSC_LINK_BASE64 }}" | base64 --decode > certificate.p12
+        echo "CSC_LINK=$PWD/certificate.p12" >> $GITHUB_ENV
+        echo "CSC_KEY_PASSWORD=${{ secrets.CSC_KEY_PASSWORD }}" >> $GITHUB_ENV
+        echo "APPLE_ID=${{ secrets.APPLE_ID }}" >> $GITHUB_ENV
+        echo "APPLE_APP_SPECIFIC_PASSWORD=${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}" >> $GITHUB_ENV
+        echo "APPLE_TEAM_ID=${{ secrets.APPLE_TEAM_ID }}" >> $GITHUB_ENV
+        echo "DIST_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> $GITHUB_ENV
+        echo "DIST_GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> $GITHUB_ENV
+    
     - name: Build app
       run: pnpm dist:mac
       if: matrix.os == 'macos-latest'
