--- a/package.json
+++ b/package.json
@@ -78,9 +78,9 @@
         }
       ],
       "hardenedRuntime": true,
-      "gatekeeperAssess": false,
-      "afterSign": "scripts/notarize.js"
+      "gatekeeperAssess": false
     },
+    "afterSign": "scripts/notarize.js",
     "mas": {
       "type": "distribution",
       "category": "public.app-category.productivity",
