--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:electron": "electron-vite dev",
     "dev:landing": "cd landing-page && vite --port 5174",
     "build": "electron-vite build",
-    "build:electron": "electron-vite build",
+    "build:electron": "electron-vite build && node scripts/inject-credentials.js",
     "build:landing": "cd landing-page && vite build && cd .. && npm run copy-landing-assets",
     "build:landing:prod": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
     "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
